--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ LAST_NAME=
 PESEL=
 PHONE_NUMBER=
 PKK_NUMBER=
+WORDID=43
 DATE_FROM=2023-08-27
 DATE_TO=2023-09-30
 PREFERRED_HOURS=06,21,20,19,10,11,12,13,14,18
