--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-EMAIL=
-PASSWORD=
+EMAIL=email@gmail.com
+PASSWORD=twoje_genialne_haslo
 CATEGORY=B
-FIRST_NAME=
-LAST_NAME=
-PESEL=
-PHONE_NUMBER=
-PKK_NUMBER=
-WORDID=43
+FIRST_NAME=Bernardo
+LAST_NAME=Silva
+PESEL=00000000000
+PHONE_NUMBER=666666666
+PKK_NUMBER=000000000000000000000
+WORDID=43 #Gdański PORD
 DATE_FROM=2023-08-27
 DATE_TO=2023-09-30
 PREFERRED_HOURS=06,21,20,19,10,11,12,13,14,18
